examples/test/testpolicy14961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14961
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key27: value2
      key45: value47
      key43: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value45
          key0: value43
      podSelector:
        matchLabels:
          key49: value13
